Fixed Alignment Issue for Mobile Version

--- a/styles.css
+++ b/styles.css
@@ -71,11 +71,25 @@ body {
 @media (max-width: 991.98px) {
   .navbar-nav {
     width: 100%;
-    text-align: right;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .navbar-collapse {
-    justify-content: flex-end;
+    justify-content: center;
+  }
+
+  .navbar-nav .nav-item {
+    margin-right: 0;
+    margin-left: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  .navbar-nav .nav-link {
+    padding: 10px;
   }
 }
 
